# rocket_wiki

./: Cargo.toml  README.md  Rocket.toml  capital.txt  run.bat  sun.txt
rocket_wiki/: test_2.txt
rocket_wiki/templates/: view.hbs
src/: main.rs
