[package]
name = "rocket_wiki"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4.10"
# rocket_dyn_templates = "*"
serde = { version = "1.0", features = ["derive"] }

# [dependencies]
# rocket = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates", "tera_templates"]

# [dependencies.rocket_dyn_templates]
# version = "0.1.0-rc.1"
# features = ["handlebars", "tera"]
